--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -42,9 +42,10 @@ using System;
 using System.Net;
 using System.Numerics;
 using System.Threading;
+using MiNET.Inventories;
+using MiNET.Items;
 using MiNET.Utils; 
 using MiNET.Utils.Skins;
-using MiNET.Items;
 using MiNET.Crafting;
 using MiNET.Net.RakNet;
 using MiNET.Utils.Metadata;
